# PyChilasPolarisGUI

./: .gitignore  PageCntrlPnl.qml  PopupInfo.qml  create_binary.py  main.py  pyLaser.py  pyproject.toml
resources/: resources.py  resources.qrc
