[project]
name = "pychilaspolarisgui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyside2>=5.15.2.1",
    "altgraph==0.17.4",
    "importlib-metadata==4.8.3",
    "pefile==2024.8.26",
    "pyinstaller==4.10",
    "pyinstaller-hooks-contrib==2022.0",
    "pyserial==3.5",
    "PySide2==5.15.2.1",
    "pywin32-ctypes==0.2.3",
    "shiboken2==5.15.2.1",
    "typing_extensions==4.1.1",
    "zipp==3.6.0"
]
